objects/Program_Product_Association__c.object
<CustomObject>
    <description>Junction Object between Campaign(Program) and Product</description>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Captures the discount</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Product__r.Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent of Program Product Association</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Program Product Associations</relationshipLabel>
        <relationshipName>Program_Product_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Parent of Program Product Association</description>
        <label>Program</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Program Product Associations</relationshipLabel>
        <relationshipName>Program_Product_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Program Product Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPA-{0000000}</displayFormat>
        <label>Program Product Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Product Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Blank_Sub_Product_Line_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF(($Setup.Global_Config__c.Mute_Validation_Rule__c==true) , False,
NOT(ISBLANK( Product__r.Sub_Product_Line__c ) ) || (ISBLANK( Product__r.Product_Line__c  ) )
)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Please choose a Product line; sub-product line value must be blank</errorMessage>
    </validationRules>
</CustomObject>